--- a/wisdomCampus/html/studentManage/student-reviewClass.html
+++ b/wisdomCampus/html/studentManage/student-reviewClass.html
@@ -72,7 +72,7 @@
 			<p class="pTime">量化时间:{{reviewDetial.fromDateText}}至{{reviewDetial.toDateText}}</p>
 			<div class="mui-content-padded">
 				<a>
-					<p class="mui-pull-left">| 行为趋势</p>
+					<p class="mui-pull-left">| 考勤/行为趋势</p>
 					<p @click="changeMarkMap" class="mui-pull-right">{{reviewDetialData.reviewDetial.markMap[reviewDetialData.markMapIndex].text}} ></p>
 				</a>
 				<div class="chart" id="lineChart"></div>
@@ -200,16 +200,25 @@
 			var setLineData = function() {
 				var tempArray1 = [];
 				var tempArray2 = [];
+				var tempFlag = 0;
 				for(var i = 0; i < reviewDetialData.reviewDetial.markDataMap.length; i++) {
 					var marpModel = reviewDetialData.reviewDetial.markMap[reviewDetialData.markMapIndex];
 					var tempModel = reviewDetialData.reviewDetial.markDataMap[i];
 					if(marpModel.value == tempModel.value) {
+						tempFlag++;
 						for(var a = 0; a < tempModel.dataArray.length; a++) {
 							var tempM = tempModel.dataArray[a];
 							tempArray1.push(tempM.date);
 							tempArray2.push(tempM.count);
 						}
 						break;
+					}
+				}
+				if(tempFlag == 0) {
+					for(var a = 0; a < reviewDetialData.reviewDetial.markEmptyDataArray.length; a++) {
+						var tempM = reviewDetialData.reviewDetial.markEmptyDataArray[a];
+						tempArray1.push(tempM.date);
+						tempArray2.push(tempM.count);
 					}
 				}
 				reviewDetialData.lineEchartDetail.xAxis[0].data = [].concat(tempArray1);
@@ -285,8 +294,8 @@
 						}],
 						//sereis的数据: 用于设置图表数据之用。series是一个对象嵌套的结构；对象内包含对象
 						series: [{
-							symbol:false,
-							showAllSymbol:false,
+							symbol: false,
+							showAllSymbol: false,
 							name: '蒸发量', //系列名称，如果启用legend，该值将被legend.data索引相关
 							type: 'line', //图表类型，必要参数！如为空或不支持类型，则该系列数据不被显示。
 							data: [2.0, 4.9, 7.0, 23.2, 25.6, 76.7, 135.6] //系列中的数据内容数组，折线图以及柱状图时数组长度等于所使用类目轴文本标签数组axis.data的长度，并且他们间是一一对应的。数组项通常为数值 
@@ -346,7 +355,7 @@
 				},
 				methods: {
 					clickStuDetail: function(model) {
-												utils.mOpenWithData("../../html/studentManage/student-reviewStudent.html", model);
+						utils.mOpenWithData("../../html/studentManage/student-reviewStudent.html", model);
 					},
 					changeMarkMap: function() {
 						var btnArray = [];
