--- a/wisdomCampus/html/studentManage/student-attendance-count.html
+++ b/wisdomCampus/html/studentManage/student-attendance-count.html
@@ -66,6 +66,7 @@
 				color: #8f8f94;
 				font-size: 14px;
 				float: right;
+				margin-top: 5px;
 			}
 			.line {
 				margin-right: ;
@@ -75,7 +76,7 @@
 			    background-color: #c8c7cc;
 			}
 			.spdiv{
-				line-height: 2;
+				line-height: 3;
 			}
 			.mui-table-view-cell.mui-collapse .mui-collapse-content {
 			    padding: 0 15px;
