行为详情，谈话详情 修改

--- a/wisdomCampus/html/studentManage/student-action-count.html
+++ b/wisdomCampus/html/studentManage/student-action-count.html
@@ -75,7 +75,7 @@
 			    background-color: #c8c7cc;
 			}
 			.spdiv{
-				line-height: 2;
+				line-height: 2.5;
 			}
 			.mui-table-view-cell.mui-collapse .mui-collapse-content {
 			    padding: 0 15px;
@@ -102,7 +102,7 @@
 		<div id="selectTitle">
 			<header class="mui-bar mui-bar-nav" style="background-color:#63BBFF;">
 				<a onclick="mui.back()" class="mui-icon mui-icon-left-nav mui-pull-left" style="color: white;"></a>
-				<h1 class="mui-title" style="color: white;">考勤统计</h1>
+				<h1 class="mui-title" style="color: white;">行为统计</h1>
 			</header>
 			<div class="mui-content" style="position: fixed;z-index: 8;background: #fff;padding-top: 0;">
 				<div class="mui-segmented-control" style="margin-top: 46px;">
