--- a/wisdomCampus/html/studentManage/student-actionDetail.html
+++ b/wisdomCampus/html/studentManage/student-actionDetail.html
@@ -227,8 +227,8 @@
 						</a>
 					</li>-->
 					<li class="mui-table-view-cell" >
-						<a href="#selectClasses" class="aCss">节次</a>
-						<a href="#selectClasses" style="width: 75%;float: right;"><span  class="mui-navigate-right  rCss">{{actionDetail.period}}</span></a>
+						<a class="aCss">节次</a>
+						<a style="width: 75%;float: right;"><span  class="rCss">{{actionDetail.period}}</span></a>
 					</li>
 				</ul>
 			</template>
