--- a/wisdomCampus/html/studentManage/student-attendance-add.html
+++ b/wisdomCampus/html/studentManage/student-attendance-add.html
@@ -489,7 +489,7 @@
 						} else if(talkTitle.student == '全部学生') {
 							mui.toast('只能选择一个学生');
 						} else if(talkTitle.kValue == '请选择' || talkTitle.kValue == '') {
-							mui.toast('请选择行为细项');
+							mui.toast('请选择考勤细项');
 						} else {
 							console.log(JSON.stringify(arr))
 							var comData = {
