--- a/wisdomCampus/html/studentManage/student-reviewClass.html
+++ b/wisdomCampus/html/studentManage/student-reviewClass.html
@@ -72,13 +72,13 @@
 			<p class="pTime">量化时间:{{reviewDetial.fromDateText}}至{{reviewDetial.toDateText}}</p>
 			<div class="mui-content-padded">
 				<a>
-					<p class="mui-pull-left">| 考勤/行为趋势</p>
+					<h5 class="mui-pull-left">| 考勤/行为趋势</h5>
 					<p @click="changeMarkMap" class="mui-pull-right">{{reviewDetialData.reviewDetial.markMap[reviewDetialData.markMapIndex].text}} ></p>
 				</a>
 				<div class="chart" id="lineChart"></div>
 				<h5 style="margin-top: 50px;">| 量化总评</h5>
 				<!--<p class="mui-pull-right" style="margin-top: -20px;">请假 ></p>-->
-				<img @click="addSubDetail" class="mui-pull-right" style="margin-top: -20px;width: 35px;height: 35px;" src="../../img/firstPage/firstPage5.png" />
+				<img @click="addSubDetail" class="mui-pull-right" style="margin-top: -20px;width: 35px;height: 35px;" src="../../img/utils/addMinScore.png" />
 				<div style="text-align: center;">
 					<p class="p_left">{{reviewDetial.averScore}}分</p>
 					<p class="p_right">/{{reviewDetial.aver2Grade}}</p>
